[tool.poetry]
name = "dia2309abril"
version = "0.1.0"
description = ""
authors = ["SofaMnera1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.7"
xlsxwriter = "^1.3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
